src/objects/User_Sharing_Model__mdt.object
<CustomObject>
    <fields>
        <fullName>Created_By_Delegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine if the record is created by Delegate or has been shared with Delegate</description>
        <label>Created By Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Relationship__c</fullName>
        <description>This field will be used to mention the object relationship that will be used in the where clause to fetch the records fo the object that are going to be shared</description>
        <inlineHelpText>This field will be used to mention the object relationship that will be used in the where clause to fetch the records fo the object that are going to be shared</inlineHelpText>
        <label>Object Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_to_Share__c</fullName>
        <description>This field will be used to determine the share object of the main object whose records are going to be shared
Help Text</description>
        <label>Object to Share</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MUSW__License2__share</fullName>
                    <default>true</default>
                    <label>MUSW__License2__share</label>
                </value>
                <value>
                    <fullName>MUSW__Complaint2__Share</fullName>
                </value>
                <value>
                    <fullName>Employment_History__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__License_Parcel__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee__share</fullName>
                </value>
                <value>
                    <fullName>BGBK__Payment__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Application2__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Submission__share</fullName>
                </value>
                <value>
                    <fullName>Answer__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fund__share</fullName>
                </value>
                <value>
                    <fullName>Accountshare</fullName>
                </value>
                <value>
                    <fullName>BGBK__Cart__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Receipt__share</fullName>
                </value>
                <value>
                    <fullName>Education_History__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee_Payment__share</fullName>
                </value>
                <value>
                    <fullName>Contactshare</fullName>
                </value>
                <value>
                    <fullName>MUSW__Account_Contact__share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel_Contact2__share</fullName>
                </value>
                <value>
                    <fullName>Fine__share</fullName>
                </value>
                <value>
                    <fullName>Exam_Information__Share</fullName>
                </value>
                <value>
                    <fullName>MUSW__Permit2__share</fullName>
                </value>
                <value>
                    <fullName>Renewal_Application__share</fullName>
                </value>
                <value>
                    <fullName>Fines__share</fullName>
                    <isActive>false</isActive>
                    <label>Fines__share</label>
                </value>
                <value>
                    <fullName>License_Agreement__share</fullName>
                    <isActive>false</isActive>
                    <label>License_Agreement__share</label>
                </value>
                <value>
                    <fullName>License_Relationship__Share</fullName>
                    <isActive>false</isActive>
                    <label>License_Relationship__Share</label>
                </value>
                <value>
                    <fullName>License_Renewal__share</fullName>
                    <isActive>false</isActive>
                    <label>License_Renewal__share</label>
                </value>
                <value>
                    <fullName>License_Verification__share</fullName>
                    <isActive>false</isActive>
                    <label>License_Verification__share</label>
                </value>
                <value>
                    <fullName>Qualifier__share</fullName>
                    <isActive>false</isActive>
                    <label>Qualifier__share</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Created_By_Delegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine if the record is created by Delegate or has been shared with Delegate</description>
        <label>Record Created By Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_Object__c</fullName>
        <description>This field will be used for determining the object whose records needs to be shared with the delegated Admin</description>
        <label>Shared Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MUSW__License2__c</fullName>
                    <default>true</default>
                    <label>MUSW__License2__c</label>
                </value>
                <value>
                    <fullName>MUSW__Complaint2__c</fullName>
                </value>
                <value>
                    <fullName>Employment_History__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__License_Parcel__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee__c</fullName>
                </value>
                <value>
                    <fullName>BGBK__Payment__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Application2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Submission__c</fullName>
                </value>
                <value>
                    <fullName>Answer__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fund__c</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>MUSW__Receipt__c</fullName>
                </value>
                <value>
                    <fullName>Education_History__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee_Payment__c</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>MUSW__Account_Contact__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel_Contact2__c</fullName>
                </value>
                <value>
                    <fullName>Fine__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Permit2__c</fullName>
                </value>
                <value>
                    <fullName>Renewal_Application__c</fullName>
                </value>
                <value>
                    <fullName>BGBK__Cart__c</fullName>
                    <isActive>false</isActive>
                    <label>BGBK__Cart__c</label>
                </value>
                <value>
                    <fullName>Exam_Information__c</fullName>
                    <isActive>false</isActive>
                    <label>Exam_Information__c</label>
                </value>
                <value>
                    <fullName>Fines__c</fullName>
                    <isActive>false</isActive>
                    <label>Fines__c</label>
                </value>
                <value>
                    <fullName>License_Agreement__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Agreement__c</label>
                </value>
                <value>
                    <fullName>License_Relationship__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Relationship__c</label>
                </value>
                <value>
                    <fullName>License_Renewal__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Renewal__c</label>
                </value>
                <value>
                    <fullName>License_Verification__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Verification__c</label>
                </value>
                <value>
                    <fullName>Qualifier__c</fullName>
                    <isActive>false</isActive>
                    <label>Qualifier__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sharing_Reason__c</fullName>
        <description>Used to share sharing reason for each sObject.</description>
        <label>Sharing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Event__c</fullName>
        <description>This field will be used for determining the event on an object for which the sharing will be triggered</description>
        <label>Triggering Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After Insert</fullName>
                    <default>true</default>
                    <label>After Insert</label>
                </value>
                <value>
                    <fullName>After Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triggering_Object__c</fullName>
        <description>This field is used to determine the object on which the sharing will be triggered</description>
        <label>Triggering Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Answer__c</fullName>
                </value>
                <value>
                    <fullName>BGBK__Cart__c</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Education_History__c</fullName>
                </value>
                <value>
                    <fullName>Employment_History__c</fullName>
                </value>
                <value>
                    <fullName>Exam_Information__c</fullName>
                </value>
                <value>
                    <fullName>Fine__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Account_Contact__c</fullName>
                    <default>true</default>
                    <label>MUSW__Account_Contact__c</label>
                </value>
                <value>
                    <fullName>MUSW__Application2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee_Payment__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fund__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__License2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel_Contact2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Receipt__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Submission__c</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Renewal_Application__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Permit2__c</fullName>
                </value>
                <value>
                    <fullName>Fines__c</fullName>
                    <isActive>false</isActive>
                    <label>Fines__c</label>
                </value>
                <value>
                    <fullName>License_Agreement__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Agreement__c</label>
                </value>
                <value>
                    <fullName>License_Relationship__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Relationship__c</label>
                </value>
                <value>
                    <fullName>License_Renewal__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Renewal__c</label>
                </value>
                <value>
                    <fullName>License_Verification__c</fullName>
                    <isActive>false</isActive>
                    <label>License_Verification__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Access_Level__c</fullName>
        <description>This field will be used to determine the access permissions for the user with whom the records in the share object will be shared with.</description>
        <label>User Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                    <default>true</default>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Sharing Model</label>
    <pluralLabel>User Sharing Models</pluralLabel>
</CustomObject>